New login system and added current user endpoint